tests/negative/gold/incomplete_dot_test.gold
tests/negative/incomplete_dot_test.toit:7:5: error: Incomplete expression
  x.  // some comment
    ^~~~~~~~~~~~~~~~~
tests/negative/incomplete_dot_test.toit:8:5: error: Incomplete expression
  x.  /* some
    ^
tests/negative/incomplete_dot_test.toit:10:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
